--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
+    "auto:css": "postcss src/assets/dist/styles.css -o src/assets/dist/styles.css",
+    "build:css": "sass src/assets/sass/main.scss src/assets/dist/styles.css --no-source-map && npm run auto:css",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "joi": "^17.9.0",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
+    "next-connect": "^0.13.0",
+    "next-joi": "^2.2.1",
+    "postcss-import": "^15.1.0",
+    "postcss-plugin": "^1.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.59.3",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
